<resources>
    <string name="app_name">ScheduShare</string>
    <string name="enter_id">Enter User ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_button">Login</string>
    <string name="schedushare_logo">ScheduShare Logo</string>
    <string name="help_button">Need Help?</string>
    <string name="forgot_id_or_password">Forget ID/Password?</string>
    <string name="logout_button">LOG OUT</string>
    <string name="upcoming_events_button">Upcoming Events</string>
    <string name="ex_time">17:30:00</string>
    <string name="events_button">EVENTS</string>
    <string name="summary_button">SUMMARY</string>
    <string name="friends_button">FRIENDS</string>
    <string name="whats_coming_next_header">Whats Coming Next</string>
    <string name="return_button_from_events_page">Back</string>
    <string name="create_button_from_events_page">Create</string>
    <string name="weekly_schedule_from_events_page">Weekly Schedule</string>
    <string name="return_button_from_summary_page">Back</string>
    <string name="summary_title">Summary</string>
    <string name="total_time_summary_page">Total Time: </string>
    <string name="save_button">Save</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="memo">Memo</string>
    <string name="create_button">Create</string>
    <string name="delete_button">Delete</string>
    <string name="tmp_schedule1">Ulf\n01/29/2024\n17:30–19:30</string>
    <string name="tmp_schedule2">Eve\n01/31/2024\n15:30–19:30</string>
    <string name="tmp_schedule3">Nad\n02/01/2024\n08:30–11:30</string>
    <string name="tmpMsg">Editing Page (Temp Msg)</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="relationship">Relationship</string>
    <string name="calendar">Calendar</string>
    <string name="no_events">No Events</string>
    <string name="back_to_friends_list_button">Back</string>
    <string name="friends_event_list_title">\'s Schedule</string>
    <string name="EditFriendActivity" />
    <string name="home_button">Home</string>
</resources>