<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige">

    <Button
        android:id="@+id/goBackFriendListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_beige"
        android:text="@string/return_button_from_events_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/friendAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_beige"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="636dp"
        android:background="@color/dark_beige"
        android:text="@string/delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goBackFriendListButton" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="date"
        android:text="@string/date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/time"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        tools:ignore="LabelFor"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="310dp"
        android:layout_height="150dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:text="@string/memo"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="16dp"
        android:text="@string/tmpMsg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>