<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="331dp"
        android:layout_height="353dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/schedushare_logo"
        android:src="@drawable/schedule_logo" />

    <EditText
        android:id="@+id/idEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/logoImageView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_id"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/idEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="220dp"
        android:layout_height="74dp"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="95dp"
        android:text="@string/login_button" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/helpTextView"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/help_button"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/forgetTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_id_or_password"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>


