<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5DC">

    <Button
        android:id="@+id/goBackFriendListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_beige"
        android:fontFamily="@font/merriweather_sans_light"
        android:text="@string/return_button_from_events_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addFriendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_beige"
        android:fontFamily="@font/merriweather_sans_light"
        android:text="@string/create_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/merriweather_sans_light"
        android:inputType="text"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/merriweather_sans_light"
        android:inputType="date"
        android:minHeight="48dp"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/merriweather_sans_light"
        android:inputType="time"
        android:minHeight="48dp"
        android:text="@string/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="310dp"
        android:layout_height="150dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/merriweather_sans_light"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/memo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>