<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige">

    <Button
        android:id="@+id/friendAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_beige"
        android:fontFamily="@font/merriweather_sans_light"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goBackFriendListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_beige"
        android:fontFamily="@font/merriweather_sans_light"
        android:text="@string/return_button_from_events_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/merriweather_sans_light"
        android:inputType="text"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/Relationship"
        android:layout_width="370dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/merriweather_sans_light"
        android:inputType="text"
        android:hint="@string/relationship"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/Description"
        android:layout_width="370dp"
        android:layout_height="180dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/merriweather_sans_light"
        android:inputType="text"
        android:hint="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Relationship"
        app:layout_constraintVertical_bias="0.012"
        tools:ignore="LabelFor" />
</androidx.constraintlayout.widget.ConstraintLayout>