<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige">

    <!-- Log Out Button -->
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/dark_beige"
        android:fontFamily="@font/merriweather_sans_light"
        android:text="@string/logout_button" />

    <!-- Coming Event -->

    <!-- Time Saved for the Event -->

    <!-- Buttons for Events, Summary, and Friends -->

    <TextView
        android:id="@+id/comingEventTextView"
        android:layout_width="345dp"
        android:layout_height="92dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/timeSavedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/comingEventTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/merriweather_sans_light"
        android:text="@string/ex_time"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/eventsButton"
            style="buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/dark_beige"
            android:fontFamily="@font/merriweather_sans_light"
            android:text="@string/events_button" />

        <Button
            android:id="@+id/summaryButton"
            style="buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/dark_beige"
            android:fontFamily="@font/merriweather_sans_light"
            android:text="@string/summary_button" />

        <Button
            android:id="@+id/friendsButton"
            style="buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@color/dark_beige"
            android:fontFamily="@font/merriweather_sans_light"
            android:text="@string/friends_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="85dp"
        android:fontFamily="@font/merriweather_sans_light"
        android:text="@string/whats_coming_next_header"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

</RelativeLayout>


