<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/goBackEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_button_from_events_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eventCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_button_from_events_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/weekly_schedule_from_events_page"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/redBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <View
        android:id="@+id/redBox"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_marginTop="244dp"
        android:background="#FF5050"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/greenBox"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:background="#5EFF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/redBox" />

    <View
        android:id="@+id/blueBox"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:background="#50FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greenBox" />

</androidx.constraintlayout.widget.ConstraintLayout>